# Bedrock

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
include/bedrock/: bedrock_log.hpp
tests/: CMakeLists.txt  test_main.cpp
